# cfr-platforms

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/cfr_platforms/: api.py  cache.py  logic.py  main.py  ocr.py  scraper.py  worker.py
src/cfr_platforms/parsers/: BucurestiNord.py  ClujNapoca.py  __init__.py
