[project]
name = "cfr-platforms"
version = "0.1.0"
description = ""
authors = [
    {name = "BootVirtual",email = "m@ghencea.net"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "opencv-python (>=5.0.0.93,<6.0.0.0)",
]

[tool.poetry]
packages = [{include = "cfr_platforms", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
