[project]
name = "cfr-platforms"
version = "0.1.0"
description = ""
authors = [
    {name = "BootVirtual",email = "m@ghencea.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "numpy (>=2.0,<2.4)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "opencv-python (>=5.0.0.93,<6.0.0.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
    "prettytable (>=3.18.0,<4.0.0)",
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
]

[tool.poetry]
packages = [{include = "cfr_platforms", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
